--- a/backend/gateway-service/.env
+++ b/backend/gateway-service/.env
@@ -3,3 +3,4 @@ PORT=3000
 PRODUCTOS_SERVICE_URL=http://localhost:3001/api/productos
 PERSONAS_SERVICE_URL=http://localhost:3002/api/personas
 VENTAS_SERVICE_URL=http://localhost:3003/api/ventas
+NATS_URL=nats://localhost:4222
