--- a/backend/personas-service/package.json
+++ b/backend/personas-service/package.json
@@ -15,6 +15,7 @@
     "@fastify/cors": "^9.0.1",
     "@fastify/static": "^7.0.4",
     "fastify": "^4.28.1",
+    "nats": "^2.28.2",
     "sequelize": "^6.37.3",
     "sqlite3": "^5.1.7"
   },
