--- a/backend/ventas-service/package.json
+++ b/backend/ventas-service/package.json
@@ -16,6 +16,7 @@
     "@fastify/static": "^7.0.4",
     "axios": "^1.7.4",
     "fastify": "^4.28.1",
+    "nats": "^2.28.2",
     "sequelize": "^6.37.3",
     "sqlite3": "^5.1.7"
   },
