--- a/backend/gateway-service/.env
+++ b/backend/gateway-service/.env
@@ -1,3 +1,6 @@
 NAME=GATEWAY SERVICE
 PORT=3000
 NATS_URL=nats://localhost:4222
+PRODUCTOS_SERVICE_URL=http://localhost:3001/api/productos
+PERSONAS_SERVICE_URL=http://localhost:3002/api/personas
+VENTAS_SERVICE_URL=http://localhost:3003/api/ventas
