--- a/backend/personas-service/.env
+++ b/backend/personas-service/.env
@@ -1,2 +1,8 @@
 NAME=PERSONAS SERVICE
 PORT=3002
+NATS_URL=nats://localhost:4222
+POSTGRESQL_DB=tienda211
+POSTGRESQL_USER=myuser
+POSTGRESQL_PASS=mypassword
+POSTGRESQL_HOST=localhost
+POSTGRESQL_PORT=5432
