--- a/backend/gateway-service/package.json
+++ b/backend/gateway-service/package.json
@@ -17,6 +17,8 @@
     "axios": "^1.7.4",
     "fastify": "^4.28.1",
     "nats": "^2.28.2",
+    "pg": "^8.13.0",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.3",
     "sqlite3": "^5.1.7"
   },
