--- a/backend/personas-service/package.json
+++ b/backend/personas-service/package.json
@@ -16,6 +16,8 @@
     "@fastify/static": "^7.0.4",
     "fastify": "^4.28.1",
     "nats": "^2.28.2",
+    "pg": "^8.13.0",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.3",
     "sqlite3": "^5.1.7"
   },
