--- a/backend/productos-service/.env
+++ b/backend/productos-service/.env
@@ -1,3 +1,8 @@
 NAME=PRODUCTOS SERVICE
 PORT=3001
 NATS_URL=nats://localhost:4222
+POSTGRESQL_DB=tienda211
+POSTGRESQL_USER=myuser
+POSTGRESQL_PASS=mypassword
+POSTGRESQL_HOST=localhost
+POSTGRESQL_PORT=5432
