--- a/backend/ventas-service/.env
+++ b/backend/ventas-service/.env
@@ -1,4 +1,8 @@
 NAME=VENTAS SERVICE
 PORT=3003
-PRODUCTOS_SERVICE_URL=http://localhost:3001/api/productos
-PERSONAS_SERVICE_URL=http://localhost:3002/api/personas
+NATS_URL=nats://localhost:4222
+POSTGRESQL_DB=tienda211
+POSTGRESQL_USER=myuser
+POSTGRESQL_PASS=mypassword
+POSTGRESQL_HOST=localhost
+POSTGRESQL_PORT=5432
